# starbot

./: .editorconfig  .env  .gitignore  Cargo.toml  Config.cs  Cross.toml  Database.cs  DatabaseObject.cs  Lambdas.cs  MemoryCache.cs  Program.cs  README.md  Scheduler.cs  SlashCommands.cs  StarBot.csproj  Statics.cs  WebManager.cs  database.db  diesel.toml  starbot.sln
Caching/: MemoryCache.cs  MemoryCacheManager.cs
DataProcessing/: Link.cs  Validation.cs  WebManager.cs
DataStorage/: CommandStorage.cs  Database.cs  DatabaseObject.cs  SqlDatabase.cs
Discord/: SlashCommands.cs  User.cs
DiscordInterop/: CommandReporting.cs  MessageCommands.cs  Moderation.cs  SlashCommands.cs  User.cs
Scheduling/: HandlerArgs.cs  Handlers.cs  Instance.cs  Lambdas.cs  Post.cs  Recovery.cs  Scheduler.cs
System/: Compatiblity.cs  Config.cs  DebugComms.cs  GlobalWatcher.cs  Initialization.cs
UserReports/: ReportCommand.cs  ReportEmbed.cs  ReportObject.cs
migrations/2024-10-18-153041_create_posts/: up.sql
migrations/2024-10-19-021711_create_db/: down.sql  up.sql
migrations/2024-11-04-161534_add_associations/: down.sql  up.sql
migrations/2024-11-15-161633_change_snowflakes_to_text/: down.sql  up.sql
migrations/2025-03-23-225719_add_ticket_tables/: down.sql  up.sql
src/: api.rs  database.rs  discord.rs  main.rs  memcache.rs  models.rs  monitor.rs  scheduler.rs  scheduler_data.rs  schema.rs  settings.rs
