[package]
name = "starbot"
version = "0.1.1"
edition = "2021"

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true   # Enable link time optimizations

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.5"
serde_json = "1.0.120"
rand = "0.8.5"
croner = "2.0.5"
chrono = "0.4.38"
rusqlite = { version = "0.32.1", features = ["bundled"] }
#rkyv = { version = "0.7", features = ["validation"] }
#sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
#serde = "1.0.204"
poise = "0.6.1"
#once_cell = "1.19.0"
