[package]
name = "starbot"
version = "0.1.2"
edition = "2021"

[profile.release]
strip = true # Automatically strip symbols from the binary.
#lto = true   # Enable link time optimizations

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.2"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.5"
serde_json = "1.0.122"
rand = "0.8.5"
croner = "2.0.5"
chrono = "0.4.38"
rusqlite = { version = "0.32.1", features = ["bundled"] }
poise = "0.6.1"
lazy_static = "1.5.0"
