[package]
name = "starbot"
version = "1.1.0"
edition = "2021"

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true   # Enable link time optimizations

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.8", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
serenity = "0.12.4"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.15"
serde_json = "1.0.140"
rand = "0.9.0"
croner = "2.1.0"
chrono = "0.4.40"
poise = "0.6.1"
lazy_static = "1.5.0"
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
